share-your-story form style spacing fixed

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -749,7 +749,13 @@ body .view-display-id-stream_forum_page{
 
 
 
-.section-share-your-story .block-webform .form-item{
-  min-height:50px;
+.section-share-your-story .block-webform{
   padding-bottom: 50px;
+  label{
+    left: 12px;
+    top: 10px;
+  }
+ .form-item{
+    min-height: 70px; 
+ }
 }
